--- a/cyclope/apps/contacts/templates/contacts/contact_labeled_icon.html
+++ b/cyclope/apps/contacts/templates/contacts/contact_labeled_icon.html
@@ -6,8 +6,8 @@
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png"/>
       <img class="icon" src="{% version contact.photo.path 'thumbnail' %}" />
       {% else %}
-      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png" border="0"/>
-        <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
+      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/contact.png" />
+      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" />
       {% endif %}
     </a>
     <h2 class="title"><a href="{% url contact-detail contact.slug %}">{{ contact.name|truncatechars:40 }}</a></h2>
