--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail.html
@@ -62,14 +62,13 @@
             {% with author_url=author.get_absolute_url %}
 
             {% if author %}
-                    <a name="author"></a>
                     <div class="author-container meta-content alert alert-info" role="alert">
                             <div class="author-container-data">
                                     {% if author.image %}
                                     <div class="media-left">
-                                            <a href="#"><img class="author img-circle"
-                                                             src="{% version author.image.path 'cropped' %}"
-                                                             border="0" title="Author"/>
+                                            <a href='{{ author_url }}'>
+                                                <img class="author img-circle" src="{% version author.image.path 'cropped' %}"
+                                                     title="Author" alt="{{ author.image.path }}" />
                                             </a>
                                     </div>
 
