--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_slideshow_item.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_slideshow_item.html
@@ -11,12 +11,12 @@
     <a href="{% url staticpage-detail staticpage.slug %}">
         {% if staticpage.pictures %}
             {% if not view_options.show_title and not view_options.show_description %}
-          <img class="icon big" src="{% version staticpage.pictures.0.image.path 'big' %}" border="0"/>
+          <img class="icon big" src="{% version staticpage.pictures.0.image.path 'big' %}" />
             {% else %}
-          <img class="slideshow_picture" src="{% version staticpage.pictures.0.image.path view_options.visualization_mode %}" border="0"/>
+          <img class="slideshow_picture" src="{% version staticpage.pictures.0.image.path view_options.visualization_mode %}" />
             {% endif %}
         {% else %}
-          <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" border="0"/>
+          <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png" />
         {% endif %}
     </a>
     </div>
