--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -4,6 +4,9 @@ body {
   /* Prevent scroll on narrow devices */
   padding-top: 35px;
 }
+img{
+  border: 0;
+}
 .clear {
   clear: both;
 }
@@ -287,11 +290,19 @@ span.category_title a {
 #right .teaser_icon_container img, #left .teaser_icon_container img {margin:0 auto; }
 #right .teaser h2.title, #left .teaser h2.title {font-size:18px;font-weight:700;margin-bottom:5px;}
 #right .teaser .summary, #left .teaser .summary {font-size:12px; margin:0;}
-#right .btn:not(.input-group-btn .btn), #left .btn:not(.input-group-btn .btn) {padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
+#right .btn, #left .btn{padding: 1px 5px;font-size: 12px;line-height: 1.5;border-radius: 3px;}
 #right .pretitle-container, #left .pretitle-container {font-size:12px;}
 #right .author, #left .author {font-size:12px; margin-top:5px; margin-bottom:5px;}
 #right .teaser_more, #left .teaser_more, #right .contact_more, #left .contact_more {margin:0 0 10px;}
 #right .teaser_more img, #left .teaser_more img#right .contact_more img, #left .contact_more img {width:10%;}
+
+#right .site.search-box .btn,
+#left .site.search-box .btn {
+    font-size: 14px;
+    padding: 6px 12px;
+    line-height: 1.42857143;
+    border-radius: 0 4px 4px 0;
+}
 
 /* ### teaser list of Category of a collection left and right ### */
 #right .collection h1.title, #left .colecction h1.title {font-size:22px;border-top: 1px solid #000;border-bottom: 1px solid #000;font-weight: 600;}
