--- a/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail_bootstrap.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/medialibrary_base_detail_bootstrap.html
@@ -34,11 +34,17 @@
 	<div class="html-content summary">{{ current_object.description|smart_style }}</div>
 
 	{% if current_object.image %}
-  <div class="movieclip_picture media-content">
-    {% if current_object.content_url %}<a href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif%} >{% endif%}
-    <img class="center-block" src="{% version current_object.image.path 'medium' %}"/>
-    {% if current_object.content_url %}</a>{% endif%}
-  </div>
+      <div class="movieclip_picture media-content">
+        {% if current_object.content_url %}
+            <a href="{{ current_object.content_url }}" {% if current_object.new_window %}target="_blank"{% endif%} >
+        {% endif%}
+
+        <img class="center-block" src="{% version current_object.image.path 'medium' %}" alt="{{ current_object.image.name }}"/>
+
+        {% if current_object.content_url %}
+            </a>
+        {% endif%}
+      </div>
 	{% endif %}
 
 	{% if current_object.get_last_change_date or current_object.source %}
@@ -64,7 +70,9 @@
 							{% if author.image %}
 							<div class="media-left">
 									<a href="#">
-											<img class="author img-circle" src="{% version author.image.path 'cropped' %}" border="0" title="Author"/>
+											<img class="author img-circle"
+												 src="{% version author.image.path 'cropped' %}"
+                                                 title="Author" alt="{{ author.image.path}}"/>
 									</a>
 							</div>
 									
