--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -33,7 +33,7 @@ When showing the StaticPage as the main content of the view, the host_template i
   
   {% if staticpage.pictures %}
     <a href="{% url staticpage-detail staticpage.slug %}">
-        <img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'big' %}" border="0"/>
+        <img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'big' %}" />
     </a>
   {% endif %}
   
