--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_labeled_icon.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_labeled_icon.html
@@ -4,9 +4,9 @@
 			<a href="{% url staticpage-detail staticpage.slug %}">
 				{% if staticpage.pictures %}
 					<img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" alt="staticpage icon"/>
-					<img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'labeled_icon_bootstrap' %}" alt="{{ staticpage.name }} "border="0"/>
+					<img class="img-responsive" src="{% version staticpage.pictures.0.image.path 'labeled_icon_bootstrap' %}" alt="{{ staticpage.name }}" />
 				{% else %}
-					<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png"  alt="not-available" border="0"/>
+					<img class="img-responsive" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/not-available.png"  alt="not-available" />
 				{% endif %}
 			</a>
 			<div class="caption">
