--- a/cyclope/core/collections/templates/collections/collection_root_categories_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_list.html
@@ -7,7 +7,7 @@
                 <span class="category_title">{{ collection.name }}</span>
                 <div class="collection_teaser">
                     {% if collection.image %}
-                        <img class="image" src="{% version collection.image.path 'fb_thumb' %}" border="0"/>
+                        <img class="image" src="{% version collection.image.path 'fb_thumb' %}" />
                     {% endif %}
                     {% if collection.description %}
                         <div class="summary">
