--- a/cyclope/templates/cyclope/source_block.html
+++ b/cyclope/templates/cyclope/source_block.html
@@ -5,7 +5,7 @@
     {% if source.link %}
       <a  href="{{source.link}}"  title="{{source.link}}">
         {% trans "Source" %}: {{source}}
-        <span class="glyphicon glyphicon-link" area-hidden="true"></span>
+        <span class="glyphicon glyphicon-link" data-area-hidden="true"></span>
       </a>
     {% else %}
       {% trans "Source" %}: {{source}}
