Validation and fixed the author views

--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_detail.html
@@ -24,7 +24,7 @@ When showing the StaticPage as the main content of the view, the host_template i
  <!-- descripcion -->
   {% if staticpage.summary %}
 		{% if CYCLOPE_THEME_TYPE == 'bootstrap' %}
-			<h4 class="summary">{{ staticpage.summary|smart_style }}</h4>
+			<div class="summary">{{ staticpage.summary|smart_style }}</div>
 		{% elif CYCLOPE_THEME_TYPE == 'classic' %}
 			<div class="summary">{{ staticpage.summary|smart_style}}</div>
 		{% endif %}
