--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -506,6 +506,7 @@ footer,
 
 /*Static Pages*/
 .staticpage-teaser ul {margin-top:10px;}
+.detail .summary {font-size:18px;}
 
 /*Site Maps*/
 #map ul {margin:0 0 0 20px;padding:0;list-style:none;}
@@ -513,3 +514,9 @@ footer,
 #map ul ul {margin:10px 0;}
 #map ul ul ul {margin:0;}
 #map li li {font-weight:400;margin:0 0 0 20px;}
+
+/*Summary*/
+.summary {font-size:18px; line-height:1.1; font-weight:500; margin:10px 0;}
+
+/*author*/
+.authors-detail {text-align: center;}
