--- a/cyclope/apps/forum/templates/forum/topic_teaser.html
+++ b/cyclope/apps/forum/templates/forum/topic_teaser.html
@@ -2,7 +2,10 @@
 
   <div class="content-view topic teaser topic-teaser {% teaser_layout_classes %}">
 
-    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/topid.png" /><a href="{% url topic-detail topic.slug %}">{{ topic.name }}</a></h2>
+    <h2 class="title">
+        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/topid.png" alt="topic icon"/>
+        <a href="{% url topic-detail topic.slug %}">{{ topic.name }}</a>
+    </h2>
 
     <div class="summary">
       {{ topic.text|truncatewords:40 }}
