--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -35,7 +35,10 @@
 
 	<div class="content-view staticpage teaser staticpage-teaser">
 
-    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" /><a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a></h2>
+    <h2 class="title">
+        <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/staticpage.png" alt="static page icon"/>
+        <a href="{% url staticpage-detail staticpage.slug %}">{{ staticpage.name }}</a>
+    </h2>
 
     {% if staticpage.summary %}
       <h3 class="html-content summary">{{ staticpage.summary|smart_style }}</h3>
