--- a/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
+++ b/cyclope/apps/related_admin/templates/related_admin/gfk_widget.html
@@ -1,5 +1,4 @@
 {% load i18n %}
-
 <div class="GenericFKAdmin">
   <input class="vGenericFKAdminField" type="text" name="{{ name }}" value="{{ value }}" id="id_{{ name }}">
   <div class="object-representation float-left">{{ obj_repr|safe }}</div>
@@ -28,11 +27,9 @@ var gfkEnsureRepresentation = function(id_name, ct_id){
     if (obj.attr("value") !== obj.attr("newValue")){
         var obj_id = obj.attr("value");
         gfkSetNewValue(id_name, ct_id + "-" + obj.attr("value"));
-        if(ct_id != "" && obj_id != ""){
-            $.get("/related_admin/render_object/" + ct_id + "/" + obj_id + "/", function(data) {
-                obj.siblings(".object-representation").html(data);
-            });
-        }
+        $.get("/related_admin/render_object/" + ct_id + "/" + obj_id + "/", function(data) {
+            obj.siblings(".object-representation").html(data);
+        });
     }
 }
 
@@ -55,13 +52,8 @@ function showGenericRelatedObjectLookupPopup(ct_field, triggering_link, url_base
 
     // Yes this is insane but there isn't a robust way to fire an event by a
     // closing window that has a long ajax function inside without blocking
-    var var_ct_select = getCTId(ct_select);
-    if(var_ct_select!=""){//no content type selected
-        setInterval(function() {gfkEnsureRepresentation(id_name, var_ct_select); }, 200);
-    }
-    else{
-        alert('{% trans "Escoja un Tipo de Contenido" %}');
-    }
+    setInterval(function() {gfkEnsureRepresentation(id_name, getCTId(ct_select)); }, 200);
+
     if (url != undefined) {
         triggering_link.href = url_base + url;
         var rv = showRelatedObjectLookupPopup(triggering_link);
@@ -77,11 +69,9 @@ var content_types = new Array();
 {% for ct in content_types %}
     content_types[{{ ct.0 }}] = '{{ ct.1 }}/{{ ct.2 }}/';
 {% endfor %}
-    
     var htmlGFKCreateButton = function(html){
         return '<div class="gfk_create_title">{% trans "Create a new image" %}</div>' + html + '<div class="gfk_create_button">{% trans "Load" %}</div>';
     };
-    
     var ct_id = $("#id_{{ ct_field }}").val();
     if (ct_id){
         $.get("/api/create/", {"ct_id": ct_id}, function (data){
@@ -91,7 +81,7 @@ var content_types = new Array();
         })
     }
 
-    $( "body" ).delegate("fieldset select", "change", function(event){
+    $("fieldset select").on("change", function(event){
         ct_field = event.currentTarget;
         if ($(ct_field).closest("fieldset").find(".GenericFKAdmin")){
             $.ajax({
@@ -108,7 +98,7 @@ var content_types = new Array();
         return false;
     });
 
-    $( "body" ).delegate( ".gfk_create_button", "click", function(event) {
+    $(".gfk_create_button").on("click", function(event) {
 
         var fileInput = $(this).siblings().find("input[name*=simplified__-file]")[0];
         var name = $(this).siblings().find("input[name*=simplified__-name]").val();
