--- a/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
+++ b/cyclope/apps/staticpages/templates/staticpages/staticpage_teaser.html
@@ -18,7 +18,7 @@
     {% endif %}
     
     {% if staticpage.summary %}
-      <h4 class="html-content summary">{{ staticpage.summary|smart_style }}</h4>
+      <div class="html-content summary">{{ staticpage.summary|smart_style }}</div>
     {% else %}
       <div class="html-content summary">{{ staticpage.text|smart_style|striptags|truncatewords:40 }}</div>
     {% endif %}
