--- a/cyclope/templates/ratings/likedislike_widget.html
+++ b/cyclope/templates/ratings/likedislike_widget.html
@@ -6,11 +6,11 @@
     <div class="likedislike {% if value %}voted{% endif %}" id="{{ widget_id }}">
         <div>
           <div class="vote-btn vote-like">
-              <img class="teaser_audiodata_img" src="{{ cyc_settings.CYCLOPE_THEME_MEDIA_URL }}images/css/like.png" />
+              <img class="teaser_audiodata_img" src="{{ cyc_settings.CYCLOPE_THEME_MEDIA_URL }}images/css/like.png" alt="{{ picture.name }}" />
           </div>
           <div class="vote-results-pos">{{score.num_positives}}</div>
           <div class="vote-btn vote-dislike">
-            <img class="teaser_audiodata_img" src="{{ cyc_settings.CYCLOPE_THEME_MEDIA_URL }}images/css/dislike.png" />
+            <img class="teaser_audiodata_img" src="{{ cyc_settings.CYCLOPE_THEME_MEDIA_URL }}images/css/dislike.png" alt="{{ picture.name }}" />
           </div>
             <div class="vote-results-neg">{{score.num_negatives}}</div>
         </div>
