Change in html code for validate password_reset in bootlind and html

--- a/cyclope/templates/registration/password_reset_form.html
+++ b/cyclope/templates/registration/password_reset_form.html
@@ -10,8 +10,7 @@
   <p>
       {% trans "Enter your e-mail address in the form below and we will send you a link for resetting your password." %}
   </p>
-  </form>
-    <form action="" method="post" class="uniForm reset_password">{% csrf_token %}
+   <form action="#" method="post" class="uniForm reset_password">{% csrf_token %}
       {{form|crispy}}
       <div class="buttonHolder">
         <input class="btn btn-default" type="submit" value="{% trans 'Reset Password' %}" >
