--- a/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/static/themes/cyclope-bootstrap/css/cyclope.less
@@ -534,10 +534,9 @@ footer,
 /*author*/
 .authors-detail {text-align: center;}
 
-
-
 .inline_detail img{float:right}
 
+/*Teaser Icon Container*/
 .main-block .teaser .teaser_icon_container,
 .one_column .teaser .teaser_icon_container{
     width: 29%;
@@ -545,3 +544,5 @@ footer,
     float: left;
 }
 
+/*Paginator*/
+#right .paginator, #left .paginator {padding:0; font-size: 12px; line-height:1.5;border-radius:3px;}
