--- a/cyclope/apps/newsletter/templates/newsletter/content_teasers.html
+++ b/cyclope/apps/newsletter/templates/newsletter/content_teasers.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="newsletter_teaser">
-    <table align="center" border="0" cellpadding="0" cellspacing="0">
+    <table>
         {% if newsletter.regions == 'tc' or newsletter.regions == 'tcl' %}
         <tr>
             <td class="top_content" valign="top" colspan="2"> 
